Refactored FileHistory and converted getFileHistory to new prefs model